# ml2json

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: python-package.yml
sklearn_json/: __init__.py  classification.py  cluster.py  decomposition.py  feature_extraction.py  preprocessing.py  regression.py
src/ml2json/: __init__.py  _base.py  _init.py  applicability_domain.py  classification.py  cluster.py  cross_decomposition.py  decomposition.py  manifold.py  ml2json.py  neighbors.py  over_undersampling.py  pipeline.py  preprocessing.py  regression.py
src/ml2json/utils/: __init__.py  bunch.py  memory.py
src/sklearn_json/: __init__.py  classification.py  cluster.py  decomposition.py  feature_extraction.py  manifold.py  neighbors.py  preprocessing.py  regression.py
src/sklearn_json/utils/: __init__.py  csr.py  random_state.py
test/: _base.py  test_applicability_domain.py  test_classification.py  test_cluster.py  test_cross_decomposition.py  test_decomposition.py  test_feature_extraction.py  test_manifold.py  test_neighbors.py  test_over_undersampling.py  test_pipeline.py  test_preprocessing.py  test_regression.py
