[metadata]
name = ml2json
version = attr: ml2json.__version__
description = A safe, transparent way to share and deploy scikit-learn models.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/OlivierBeq/ml2json
author = Mathieu Rodrigue
author_email = support@mlrequest.com
maintainer = Olivier J.M. Béquignon
maintainer_email = olivier.bequignon.maintainer@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

keywords =
    scikit-learn
    serializing
    json
    reproducibility
    machine learning


[options]
include_package_data = True
packages = find:
package_dir =
    = src
install_requires =
    scikit-learn>=0.21.3
    scipy
    joblib


[options.packages.find]
where = src


[options.package_data]
* = *.json


[options.extras_require]
full =
    xgboost
    lightgbm
    catboost
    hdbscan
    pynndescent
    umap-learn
    kmodes

docs =
    sphinx
    sphinx-rtd-theme
    sphinx-autodoc-typehints

testing =
    pytest
